Implemented success page for direct checkout

--- a/app/design/frontend/base/default/template/ebanx/ebanx/direct.phtml
+++ b/app/design/frontend/base/default/template/ebanx/ebanx/direct.phtml
@@ -116,7 +116,7 @@
   </li>
 
   <li class="ebanx-cc-field">
-    <label for="ebanx_cc_number" class="required"><em>*</em>Credit Card Number/CVV</label>
+    <label for="ebanx_cc_number" class="required"><em>*</em>Credit Card Number</label>
       <div class="input-box">
         <input type="text" id="ebanx_cc_number" name="ebanx[cc_number]" title="Credit Card Number" class="input-text required-entry" value="" autocomplete="off">
       </div>
