Removed installments from checkout mode, updated UpdatePaymentMethods action to use the fake API

--- a/app/design/frontend/base/default/template/ebanx/ebanx/checkout.phtml
+++ b/app/design/frontend/base/default/template/ebanx/ebanx/checkout.phtml
@@ -7,7 +7,7 @@
 }
 </style>
 
-<?php if ($this->getInstallmentsActive()): ?>
+<?php if ($this->getInstallmentsActive() && false /* force disable for checkout mode */): ?>
 <div id="ebanx_installments">
     <table>
         <tr>
