--- a/app/design/frontend/base/default/layout/ebanx.xml
+++ b/app/design/frontend/base/default/layout/ebanx.xml
@@ -3,7 +3,7 @@
   <ebanx_payment_success translate="label">
     <label>EBANX Payment Success</label>
     <reference name="root">
-      <action method="setTemplate"><template>page/2columns-right.phtml</template></action>
+      <action method="setTemplate"><template>page/1column.phtml</template></action>
     </reference>
     <reference name="content">
       <block type="checkout/onepage_success" name="checkout.success" template="ebanx/payment/success.phtml"/>
