--- a/app/design/frontend/base/default/template/ebanx/ebanx/direct.phtml
+++ b/app/design/frontend/base/default/template/ebanx/ebanx/direct.phtml
@@ -12,7 +12,8 @@
 #payment_ebanx_direct .cvv {
   width: 30px;
 }
-.ebanx-cc-field {
+.ebanx-cc-field.
+.ebanx-tef-field {
   display: none;
 }
 .ebanx-method {
@@ -37,6 +38,7 @@
   cursor: pointer;
   border-radius: 4px;
   border: 1px solid #ddd;
+  background-color: #fff;
   width: 78px;
   height: 88px;
   padding: 20px;
@@ -240,6 +242,22 @@
     </div>
   </li>
   <?php endif ?>
+
+  <?php if (in_array('tef', $this->getDirectMethods())): ?>
+    <li class="ebanx-tef-field">
+      <label for="ebanx_tef_bank" class="required"><em>*</em>Bank</label>
+      <div class="input-box">
+        <select id="ebanx_tef_bank" name="ebanx[tef_bank]" title="Credit Card Type" class="required-entry" autocomplete="off">
+          <option value="" selected="selected">--Please Select--</option>
+          <option value="banrisul">Banrisul</option>
+          <option value="bradesco">Bradesco</option>
+          <option value="bancodobrasil">Banco do Brasil</option>
+          <option value="hsbc">HSBC</option>
+          <option value="itau">Itaú</option>
+        </select>
+      </div>
+    </li>
+  <? endif ?>
 </ul>
 
 <script>
@@ -260,6 +278,7 @@
       , 'ebanx_method_creditcard'
       , 'ebanx_method_tef'
       , 'ebanx_cc_installments'
+      , 'ebanx_tef_bank'
     ];
 
   /**
@@ -284,7 +303,7 @@
     if (ebanxRadio.checked == true) {
       ebanxDirectForm.style.display = 'block';
       enableFields();
-      toggleCCFields();
+      toggleFields();
     } else {
       ebanxDirectForm.style.display = 'none';
     }
@@ -311,15 +330,41 @@
     enableFields();
   }
 
+  /**
+   * Toggle TEF fields when changing the EBANX payment method
+   * @return void
+   */
+  function toggleTEFFields() {
+    var radio  = document.getElementById('ebanx_method_tef')
+      , fields = document.getElementsByClassName('ebanx-tef-field');
+
+    if (radio) {
+      for (i = 0; i < fields.length; i++) {
+        if (radio.checked == true) {
+          fields[i].style.display = 'block';
+        } else {
+          fields[i].style.display = 'none';
+        }
+      }
+    }
+
+    enableFields();
+  }
+
+  function toggleFields() {
+    toggleCCFields();
+    toggleTEFFields();
+  }
+
   // Toggle the CC fields on method change
   var methodBoleto = document.getElementById('ebanx_method_boleto')
     , methodCC     = document.getElementById('ebanx_method_creditcard')
     , methodTef    = document.getElementById('ebanx_method_tef');
 
   if (methodCC && methodBoleto) {
-    methodCC.onclick     = toggleCCFields;
-    methodBoleto.onclick = toggleCCFields;
-    methodTef.onclick    = toggleCCFields;
+    methodCC.onclick     = toggleFields;
+    methodBoleto.onclick = toggleFields;
+    methodTef.onclick    = toggleFields;
   }
 
   setTimeout(toggleDirectForm, 1000);
